--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
     "@prisma/client": "^6.4.1",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.77.2",
     "lucide-react": "^0.476.0",
     "next": "15.2.0",
+    "next-sanity": "^9.8.60",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "sanity": "^3.77.2",
+    "styled-components": "^6.1.15",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
